--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first page</title>
 </head>
 <body>
     <p>
-        <h1>Hello World</h1>
+        this is paragraph
     </p>
 </body>
 </html>
